ops-test-2/k8s/istio/namespace-istio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test2
  labels:
    istio-injection: enabled
